Deployment ed56532e-b568-4082-a4af-0af17164c946: Run number 5

--- a/src/WRA.Umbraco.Web/appsettings.json
+++ b/src/WRA.Umbraco.Web/appsettings.json
@@ -14,6 +14,11 @@
     "Licenses": {
       "Umbraco.Commerce": "LJXCQ-EVMSZ-VTPPG-XOJRJ"
     },
+    "Deploy": {
+      "Settings": {
+        "TransferFormsAsContent": true
+      }
+    },
     "CMS": {
       "Global": {
         "Id": "a3d722eb-f749-43bf-8e8b-57d0c548ee30",
