--- a/src/WRA.Umbraco.Web/WRA.Umbraco.Web.csproj
+++ b/src/WRA.Umbraco.Web/WRA.Umbraco.Web.csproj
@@ -45,14 +45,12 @@
 		<Content Include="App_Plugins\**" CopyToOutputDirectory="Always" />
 	</ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.8.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.8.0" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.11" />
+    <!-- <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.0" /> -->
     <PackageReference Include="Umbraco.Cloud.Cms.PublicAccess" Version="13.0.0" />
     <PackageReference Include="Umbraco.Cloud.Identity.Cms" Version="13.0.0" />
     <PackageReference Include="Umbraco.Cloud.StorageProviders.AzureBlob" Version="13.0.0" />
-    <PackageReference Include="Umbraco.Cms" Version="13.0.3" />
-    <PackageReference Include="Umbraco.Cms.Web.Common" Version="13.0.3" />
+    <PackageReference Include="Umbraco.Cms" Version="13.1.0" />
+    <PackageReference Include="Umbraco.Cms.Web.Common" Version="13.1.0" />
     <PackageReference Include="Umbraco.Cms.Infrastructure" Version="13.1.0" />
     <PackageReference Include="Umbraco.Deploy.Cloud" Version="13.0.3" />
     <PackageReference Include="Umbraco.Deploy.Contrib" Version="13.0.0" />
@@ -61,16 +59,10 @@
     <PackageReference Include="Umbraco.Workflow" Version="13.0.2" />
     <PackageReference Include="uSync" Version="13.0.0" />
     <PackageReference Include="Umbraco.Forms.Core.Providers" Version="13.0.1" />
-    <PackageReference Include="Umbraco.Cms.Imaging.ImageSharp" Version="13.0.3" />
+    <PackageReference Include="Umbraco.Cms.Imaging.ImageSharp" Version="13.1.0" />
 
   </ItemGroup>
-	
 
-  <ItemGroup>
-    <!-- Opt-in to app-local ICU to ensure consistent globalization APIs across different platforms -->
-    <PackageReference Include="Microsoft.ICU.ICU4C.Runtime" Version="68.2.0.9" />
-    <RuntimeHostConfigurationOption Include="System.Globalization.AppLocalIcu" Value="68.2.0.9" Condition="$(RuntimeIdentifier.StartsWith('linux')) or $(RuntimeIdentifier.StartsWith('win')) or ('$(RuntimeIdentifier)' == '' and !$([MSBuild]::IsOSPlatform('osx')))" />
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\WRA.Umbraco\WRA.Umbraco.csproj" />
