Deployment c82d9757-96e2-4e36-bfbb-1f2c5ce7a122: Run number 359

--- a/src/WRA.Umbraco.Web/appsettings.json
+++ b/src/WRA.Umbraco.Web/appsettings.json
@@ -16,7 +16,9 @@
     },
     "Deploy": {
       "Settings": {
-        "TransferFormsAsContent": true
+        "TransferFormsAsContent": true,
+        "AllowMembersDeploymentOperations": "Transfer",
+        "TransferMemberGroupsAsContent": true
       }
     },
     "CMS": {
