Deployment 71e838fd-51ef-4d6e-9bd0-9a634da70fcb: Run number 377

--- a/src/WRA.Umbraco.Web/appsettings.json
+++ b/src/WRA.Umbraco.Web/appsettings.json
@@ -14,6 +14,12 @@
     "Licenses": {
       "Umbraco.Commerce": "LJXCQ-EVMSZ-VTPPG-XOJRJ"
     },
+    "Commerce": {
+      "StorefrontAPi": {
+        "Enabled": true,
+        "ApiKey": "BtwRaJBwxCYe7eBKnbC7"
+      }
+    },
     "Deploy": {
       "Settings": {
         "TransferFormsAsContent": true,
