--- a/src/WRA.Umbraco/WRA.Umbraco.csproj
+++ b/src/WRA.Umbraco/WRA.Umbraco.csproj
@@ -8,8 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <!-- CoreCompat is deprecated and unmaintained but is require for the Global Payments SDK /shrug -->
+    <PackageReference Include="CoreCompat.System.Drawing" Version="1.0.0-beta006" />
+    <PackageReference Include="GlobalPayments.Api" Version="8.0.4" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="RestSharp" Version="110.2.0" />
+    <PackageReference Include="System.Drawing.Common" Version="8.0.1" />
     <PackageReference Include="Umbraco.Cms" Version="13.1.0" />
     <PackageReference Include="Umbraco.Commerce" Version="13.0.0" />
     <PackageReference Include="Umbraco.Commerce.Cms" Version=" 13.0.0" />
