Deployment 577401e0-0457-4b6c-9e2e-488e73f58a49: Run number 389

--- a/src/WRA.Umbraco.Web/appsettings.json
+++ b/src/WRA.Umbraco.Web/appsettings.json
@@ -33,7 +33,15 @@
         "UseHttps": true,
         "NoNodesViewPath": "~/umbraco/UmbracoWebsite/Deploy/NoNodes.cshtml",
         "ReservedPaths": "~/app_plugins/,~/install/,~/mini-profiler-resources/,~/umbraco/,~/error/",
-        "SanitizeTinyMce": true
+        "SanitizeTinyMce": true,
+        "Smtp": {
+          "Host": "smtp.postmarkapp.com",
+          "From": "WRA@lightburn.co",
+          "Port": 587,
+          "SecureSocketOptions": "Auto",
+          "Username": "Umbraco__CMS__Global__Smtp__Username",
+          "Password": "Umbraco__CMS__Global__Smtp__Password"
+        }
       },
       "Content": {
         "AllowEditInvariantFromNonDefault": true,
