--- a/src/WRA.Umbraco.Web/package.json
+++ b/src/WRA.Umbraco.Web/package.json
@@ -14,7 +14,11 @@
   "dependencies": {
     "@babel/core": "^7.21.4",
     "@babel/preset-env": "^7.21.4",
+    "@event-calendar/core": "^2.5.1",
+    "@event-calendar/day-grid": "2.5.1",
+    "@event-calendar/time-grid": "^2.5.1",
     "a11y-accordion-tabs": "^1.0.2",
+    "a11y-dialog": "^8.0.4",
     "babelify": "^10.0.0",
     "bootstrap": "^5.3.0",
     "browserify": "^17.0.0",
@@ -28,9 +32,6 @@
     "sass": "^1.69.1",
     "swiper": "^11.0.3",
     "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0",
-    "@event-calendar/core": "^2.5.1",
-    "@event-calendar/day-grid": "2.5.1",
-    "@event-calendar/time-grid": "^2.5.1"
+    "vinyl-source-stream": "^2.0.0"
   }
 }
