Deployment e29ca44e-5ac1-4df6-980f-1c4028526c5e: Run number 397

--- a/src/WRA.Umbraco.Web/.gitignore
+++ b/src/WRA.Umbraco.Web/.gitignore
@@ -456,7 +456,7 @@ $RECYCLE.BIN/
 ##
 ## Umbraco CMS
 ##
-
+appsettings.Local.json
 # JSON schema files for appsettings.json
 appsettings-schema.json
 appsettings-schema.*.json
@@ -479,3 +479,4 @@ appsettings-schema.*.json
 /wwwroot/media/
 
 /Smidge
+
