Deployment 1e3c5492-a07c-4b33-89b8-9e5244cffa9f: Run number 406

--- a/src/WRA.Umbraco.Web/appsettings.json
+++ b/src/WRA.Umbraco.Web/appsettings.json
@@ -41,6 +41,15 @@
           "SecureSocketOptions": "Auto",
           "Username": "Umbraco__CMS__Global__Smtp__Username",
           "Password": "Umbraco__CMS__Global__Smtp__Password"
+        },
+        "MemberPassword": {
+          "RequiredLength": 10,
+          "RequireNonLetterOrDigit": false,
+          "RequireDigit": false,
+          "RequireLowercase": false,
+          "RequireUppercase": false,
+          "HashAlgorithmType": "HMACSHA256",
+          "MaxFailedAccessAttemptsBeforeLockout": 5
         }
       },
       "Content": {
