Deployment 736278d8-db29-408e-9898-85e5869829f3: Run number 408

--- a/src/WRA.Umbraco.Web/appsettings.json
+++ b/src/WRA.Umbraco.Web/appsettings.json
@@ -72,5 +72,8 @@
         "UpgradeUnattended": true
       }
     }
+  },
+  "ConnectionStrings": {
+    "AzureServiceBus": "ConnectionString__AzureServiceBus"
   }
 }
