Deployment 189b7fff-751b-4abe-99d6-a1a6677f9c12: Run number 456

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,9 +20,9 @@
         "pattern": "\\bNow listening on:\\s+(https?://\\S+)",
         "uriFormat": "http://localhost:44336"
       },
-      // "env": {
-      //   "ASPNETCORE_ENVIRONMENT": "Local"
-      // },
+      "env": {
+        "ASPNETCORE_ENVIRONMENT": "development"
+      },
       "sourceFileMap": {
         "/Views": "${workspaceFolder}/Views"
       },
