--- a/src/WRA.Umbraco.Web/appsettings.json
+++ b/src/WRA.Umbraco.Web/appsettings.json
@@ -75,5 +75,19 @@
   },
   "ConnectionStrings": {
     "AzureServiceBus": "ConnectionString__AzureServiceBus"
+  },
+  "SubscriptionServiceSettings": {
+    "MemberSubscriptionSettings": {
+      "AzureUrl": "SubscriptionServiceSettings__MemberSubscriptionSettings__AzureUrl",
+      "BaseUrl": "https://localhost:44336",
+      "SubscriptionName": "website-prod-member-subscription",
+      "TopicName": "website-prod-member"
+    },
+    "ProductSubscriptionSettings": {
+      "AzureUrl": "SubscriptionServiceSettings__ProductSubscriptionSettings__AzureUrl",
+      "BaseUrl": "https://localhost:44336",
+      "SubscriptionName": "website-prod-product-subscription",
+      "TopicName": "website-prod-product"
+    }
   }
 }
