--- a/src/WRA.Umbraco.Web/WRA.Umbraco.Web.csproj
+++ b/src/WRA.Umbraco.Web/WRA.Umbraco.Web.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
  
   <ItemGroup>
+    <None Remove="gulpfile.js" />
     <None Remove="VS.vs.zip" />
   </ItemGroup>
   
@@ -18,6 +19,10 @@
   
   <ItemGroup>
     <Content Remove="Views\Calendar.cshtml" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <Content Include="build.mjs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -43,6 +48,8 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\catalogue-thumbnails\" />
+    <Folder Include="wwwroot\css\dist\" />
+    <Folder Include="wwwroot\js\dist\" />
   </ItemGroup>
 
   <PropertyGroup>
