Deployment e220f98a-3703-490f-a3b4-43f50d156daf: Run number 508

--- a/src/WRA.Umbraco/WRA.Umbraco.csproj
+++ b/src/WRA.Umbraco/WRA.Umbraco.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="Umbraco.Commerce.Cms.Web" Version=" 13.0.0" />
     <PackageReference Include="Umbraco.Commerce.Common" Version=" 13.0.1" />
     <PackageReference Include="Umbraco.Commerce.Core" Version=" 13.0.1" />
+    <PackageReference Include="Umbraco.Commerce.Deploy" Version="13.0.0" />
     <PackageReference Include="Umbraco.Commerce.Infrastructure" Version=" 13.0.1" />
     <PackageReference Include="Umbraco.Commerce.Persistence.Sqlite" Version="13.0.0" />
     <PackageReference Include="Umbraco.Commerce.Persistence.SqlServer" Version="13.0.0" />
