Deployment b9acfcfe-a441-4056-b7b0-55701951f767: Run number 513

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,7 +21,7 @@
         "uriFormat": "http://localhost:44336"
       },
       "env": {
-        "ASPNETCORE_ENVIRONMENT": "development"
+        "ASPNETCORE_ENVIRONMENT": "local"
       },
       "sourceFileMap": {
         "/Views": "${workspaceFolder}/Views"
