--- a/src/WRA.Umbraco.Web/appsettings.Production.json
+++ b/src/WRA.Umbraco.Web/appsettings.Production.json
@@ -1,5 +1,5 @@
 {
-  "$schema" : "./appsettings-schema.json",
+  "$schema": "./appsettings-schema.json",
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
@@ -12,6 +12,9 @@
   },
   "Umbraco": {
     "CMS": {
+      "Content": {
+        "MacroErrors": "Silent"
+      },
       "Hosting": {
         "Debug": false
       },
@@ -22,4 +25,3 @@
     }
   }
 }
-
