--- a/src/WRA.Umbraco.Web/appsettings.json
+++ b/src/WRA.Umbraco.Web/appsettings.json
@@ -53,6 +53,10 @@
         }
       },
       "Content": {
+        "Notifications": {
+          "Enabled": true,
+          "Email": "noreply@lightburn.co"
+        },
         "AllowEditInvariantFromNonDefault": true,
         "ContentVersionCleanupPolicy": {
           "EnableCleanup": true
