--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,7 +21,7 @@
         "uriFormat": "http://localhost:44336"
       },
       "env": {
-        "ASPNETCORE_ENVIRONMENT": "local"
+        "ASPNETCORE_ENVIRONMENT": "development"
       },
       "sourceFileMap": {
         "/Views": "${workspaceFolder}/Views"
