Deployment be51fdc4-40da-45ee-8423-74bfe469b636: Run number 564

--- a/src/WRA.Umbraco/WRA.Umbraco.csproj
+++ b/src/WRA.Umbraco/WRA.Umbraco.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\Generated\EventCalendar.generated.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <!-- CoreCompat is deprecated and unmaintained but is require for the Global Payments SDK /shrug -->
     <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.17.2" />
     <PackageReference Include="CoreCompat.System.Drawing" Version="1.0.0-beta006" />
