Deployment 5be27e13-dfea-483c-951c-b2e499e2f07e: Run number 590

--- a/src/WRA.Umbraco.Web/WRA.Umbraco.Web.csproj
+++ b/src/WRA.Umbraco.Web/WRA.Umbraco.Web.csproj
@@ -26,6 +26,7 @@
   </ItemGroup> -->
 
   <ItemGroup>
+    <PackageReference Include="CMSImport" Version="13.1.0" />
     <PackageReference Include="Umbraco.Cloud.Cms.PublicAccess" Version="13.0.0" />
     <PackageReference Include="Umbraco.Cloud.Identity.Cms" Version="13.0.0" />
     <PackageReference Include="Umbraco.Cloud.StorageProviders.AzureBlob" Version="13.0.0" />
