Deployment 2f041318-b79e-4543-ae4a-927027c5111e: Run number 591

--- a/src/WRA.Umbraco.Web/WRA.Umbraco.Web.csproj
+++ b/src/WRA.Umbraco.Web/WRA.Umbraco.Web.csproj
@@ -53,6 +53,12 @@
     <Folder Include="wwwroot\js\dist\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="cmsimport.lic">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
   <PropertyGroup>
     <!-- Razor files are needed for the backoffice to work correctly -->
     <CopyRazorGenerateFilesToPublishDirectory>true</CopyRazorGenerateFilesToPublishDirectory>
