--- a/src/WRA.Umbraco.Web/.gitignore
+++ b/src/WRA.Umbraco.Web/.gitignore
@@ -479,5 +479,4 @@ appsettings-schema.*.json
 /wwwroot/media/
 
 /Smidge
-/umbraco/Deploy/Revision/dictionary-item__5f175ae10df74d5aac3a7bd039068824.uda
-
+/App_Plugins/cmsimport/*
