Deployment 414ad447-e230-41ff-8e63-28176ef21d2f: Run number 594

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,4 +3,6 @@ eol=lf
 
 # Declare files that will always have CRLF line endings on checkout.
 *.sln text eol=crlf
-/src/WRA.Umbraco/Models/Generated/*.cs text eol=lf
+./src/WRA.Umbraco/Models/Generated/*.cs text eol=lf
+./src/WRA.Umbraco.Web/Umbraco/Deploy/*.uda text eol=lf
+./src/WRA.Umbraco.Web/Umbraco/Deploy/Revision/*.uda text eol=lf
