--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
       "type": "process",
       "args": [
         "build",
-        "${workspaceFolder}/src/WRA.Umbraco.Web/WRA.Umbraco.Web.csproj",
+        "D:/Lightburn/WRA.Umbraco/src/WRA.Umbraco.Web/WRA.Umbraco.Web.csproj",
         "/property:GenerateFullPaths=true",
         "/consoleloggerparameters:NoSummary"
       ],
