--- a/NuGet.config
+++ b/NuGet.config
@@ -2,6 +2,7 @@
 <configuration>
   <packageSources>
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
+    <add key="Umbraco Nightly" value="https://www.myget.org/F/umbraconightly/api/v3/index.json" />
   </packageSources>
 
   <activePackageSource>
