--- a/src/WRA.Umbraco/WRA.Umbraco.csproj
+++ b/src/WRA.Umbraco/WRA.Umbraco.csproj
@@ -27,6 +27,7 @@
     <PackageReference Include="Umbraco.Commerce.Cms.Web" Version=" 13.1.0" />
     <PackageReference Include="Umbraco.Commerce.Common" Version=" 13.1.0" />
     <PackageReference Include="Umbraco.Commerce.Core" Version=" 13.1.0" />
+    <PackageReference Include="Umbraco.Commerce.Deploy" Version="13.1.1--preview.2.gffc2603" />
     <PackageReference Include="Umbraco.Commerce.Infrastructure" Version=" 13.1.0" />
     <PackageReference Include="Umbraco.Commerce.Persistence.Sqlite" Version="13.1.0" />
     <PackageReference Include="Umbraco.Commerce.Persistence.SqlServer" Version="13.1.0" />
