Deployment 29456eb6-07ea-437a-b2f7-e27ffeda07d2: Run number 633

--- a/src/WRA.Umbraco.Web/appsettings.json
+++ b/src/WRA.Umbraco.Web/appsettings.json
@@ -53,6 +53,12 @@
         }
       },
       "Content": {
+        "Error404Collection": [
+          {
+            "Culture": "default",
+            "ContentKey": "a75c4fd9-15d1-406e-adfb-ee437f617083"
+          }
+        ],
         "Notifications": {
           "Enabled": true,
           "Email": "noreply@lightburn.co"
@@ -60,13 +66,7 @@
         "AllowEditInvariantFromNonDefault": true,
         "ContentVersionCleanupPolicy": {
           "EnableCleanup": true
-        },
-        "Error404Collection": [
-          {
-            "Culture": "default",
-            "ContentXPath": "//error404[@nodeName='404']"
-          }
-        ]
+        }
       },
       "ModelsBuilder": {
         "ModelsMode": "Nothing",
