Deployment 3fe7a1e4-e1e7-40ba-b86f-d9b04322e4ae: Run number 637

--- a/src/WRA.Umbraco.Web/appsettings.json
+++ b/src/WRA.Umbraco.Web/appsettings.json
@@ -75,6 +75,14 @@
       "Unattended": {
         "UpgradeUnattended": true
       }
+    },
+    "Forms": {
+      "FieldTypes": {
+        "Recaptcha3": {
+          "SiteKey": "6LeTyYkpAAAAAO1xe42_iJdF1fMyJzHSh-_MzPYj",
+          "PrivateKey": "6LeTyYkpAAAAAHtov-al_drTRz0VPRffGA89iYuT"
+        }
+      }
     }
   },
   "ConnectionStrings": {
