--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,7 +18,7 @@
       "serverReadyAction": {
         "action": "openExternally",
         "pattern": "\\bNow listening on:\\s+(https?://\\S+)",
-        "uriFormat": "http://localhost:44336"
+        "uriFormat": "http://localhost:%s"
       },
       "env": {
         "ASPNETCORE_ENVIRONMENT": "Local"
