--- a/src/WRA.Umbraco.Web/WRA.Umbraco.Web.csproj
+++ b/src/WRA.Umbraco.Web/WRA.Umbraco.Web.csproj
@@ -34,12 +34,13 @@
     <PackageReference Include="Umbraco.Cms.Imaging.ImageSharp" Version="13.1.1" />
     <PackageReference Include="Umbraco.Cms.Web.Common" Version="13.1.1" />
     <PackageReference Include="Umbraco.Cms.Infrastructure" Version="13.1.1" />
+    <PackageReference Include="Umbraco.Commerce.Deploy" Version="13.1.1" />
     <PackageReference Include="Umbraco.Deploy.Cloud" Version="13.0.4" />
     <PackageReference Include="Umbraco.Deploy.Contrib" Version="13.0.0" />
     <PackageReference Include="Umbraco.Forms" Version="13.0.2" />
     <PackageReference Include="Umbraco.Forms.Deploy" Version="13.0.0" />
     <PackageReference Include="Umbraco.Workflow" Version="13.0.2" />
-    <PackageReference Include="Umbraco.Forms.Core.Providers" Version="13.0.2" />
+    <PackageReference Include="Umbraco.Forms.Core.Providers" Version="13.0.2" />  
 
   </ItemGroup>
 
