Deployment bcd70afc-093b-4480-8b3a-5031cc5517a1: Run number 752

--- a/src/WRA.Umbraco.Web/appsettings.json
+++ b/src/WRA.Umbraco.Web/appsettings.json
@@ -101,5 +101,15 @@
       "SubscriptionName": "website-prod-product-subscription",
       "TopicName": "website-prod-product"
     }
+  },
+  "DateFoldersConfig": {
+    "ItemDateProperty": "originalPublishedDate",
+    "FolderDocType": "dateFolder",
+    "AllowedParentDocTypes": [
+      "hotTips"
+    ],
+    "ItemDocTypes": [
+      "hotTipEntry"
+    ]
   }
 }
