Deployment b23413ff-e8e0-461c-962b-2f5c6331f6fa: Run number 757

--- a/src/WRA.Umbraco.Web/appsettings.json
+++ b/src/WRA.Umbraco.Web/appsettings.json
@@ -86,7 +86,11 @@
     }
   },
   "ConnectionStrings": {
-    "AzureServiceBus": "ConnectionString__AzureServiceBus"
+    "AzureServiceBus": "ConnectionString__AzureServiceBus",
+    "umbracoDbDSN": "Data Source=|DataDirectory|/Umbraco.sqlite.db;Cache=Shared;Foreign Keys=True;Pooling=True",
+    "umbracoDbDSN_ProviderName": "Microsoft.Data.SQLite",
+    "umbracoCommerceDbDSN": "Data Source=|DataDirectory|/Umbraco.Commerce.sqlite.db;Mode=ReadWrite;Foreign Keys=True;Pooling=True;Cache=Shared",
+    "umbracoCommerceDbDSN_ProviderName": "Microsoft.Data.SQLite"
   },
   "SubscriptionServiceSettings": {
     "MemberSubscriptionSettings": {
