Deployment 78636518-2d7d-40ff-9ae1-1f97e92f1bbf: Run number 762

--- a/src/WRA.Umbraco.Web/appsettings.json
+++ b/src/WRA.Umbraco.Web/appsettings.json
@@ -28,6 +28,10 @@
       }
     },
     "CMS": {
+      "Runtime": {
+        "MaxQueryStringLength": 90,
+        "MaxRequestLength": 2000
+      },
       "Global": {
         "Id": "a3d722eb-f749-43bf-8e8b-57d0c548ee30",
         "UseHttps": true,
