Deployment 203a863b-2b2b-4ec4-a95e-4e77af1fbad7: Run number 782

--- a/src/WRA.Umbraco.Web/appsettings.json
+++ b/src/WRA.Umbraco.Web/appsettings.json
@@ -45,7 +45,9 @@
           "SecureSocketOptions": "Auto",
           "Username": "Umbraco__CMS__Global__Smtp__Username",
           "Password": "Umbraco__CMS__Global__Smtp__Password"
-        },
+        }
+      },
+      "Security": {
         "MemberPassword": {
           "RequiredLength": 10,
           "RequireNonLetterOrDigit": false,
