Deployment d33fe36a-f6df-400f-9d40-51631641666b: Run number 814

--- a/src/WRA.Umbraco.Web/WRA.Umbraco.Web.csproj
+++ b/src/WRA.Umbraco.Web/WRA.Umbraco.Web.csproj
@@ -17,6 +17,9 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Content Remove="Views\MyWRA.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
     <None Remove="gulpfile.js" />
   </ItemGroup>
   
