Deployment 086c0d00-62aa-4f64-b573-7f741c5bebcb: Run number 887

--- a/src/WRA.Umbraco.Web/appsettings.json
+++ b/src/WRA.Umbraco.Web/appsettings.json
@@ -77,9 +77,6 @@
       "ModelsBuilder": {
         "ModelsMode": "Nothing",
         "ModelsNamespace": "WRA.Umbraco.Models"
-      },
-      "Unattended": {
-        "UpgradeUnattended": true
       }
     },
     "Forms": {
@@ -105,6 +102,10 @@
     "VisibleToAllSlidingCacheSeconds": "14400",
     "VisibleToMemberGroupsSlidingCacheSeconds": "1800",
     "MemberAuthorizedByGroupSlidingCacheMinutes": "1800"
+  },
+  "RecurringJobSettings": {
+    "AllJobsManual": true,
+    "DisableJobs": false
   },
   "MessagingSettings": {
     "Enabled": true,
