--- a/src/WRA.Umbraco.Web/WRA.Umbraco.Web.csproj
+++ b/src/WRA.Umbraco.Web/WRA.Umbraco.Web.csproj
@@ -41,6 +41,10 @@
     <PackageReference Include="Umbraco.Forms.Deploy" Version="13.0.0" />
     <PackageReference Include="Umbraco.Workflow" Version="13.0.2" />
     <PackageReference Include="Umbraco.Forms.Core.Providers" Version="13.1.2" />
+    <PackageReference Update="Roslynator.Analyzers" Version="4.12.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
 
   </ItemGroup>
 
