Deployment a5881903-6f1f-42ef-b235-3dd5b7beb4ad: Run number 888

--- a/src/WRA.Umbraco.Web/appsettings.Production.json
+++ b/src/WRA.Umbraco.Web/appsettings.Production.json
@@ -23,5 +23,39 @@
         "CacheBuster": "AppDomain"
       }
     }
+  },
+  "MessagingSettings": {
+    "EndpointSettings": [
+      {
+        "Enabled": false,
+        "EndpointType": "Topic",
+        "EntityName": "Member",
+        "EntityEventName": "MemberEvent",
+        "RateLimitSettings": {
+          "Enabled": true,
+          "RateLimit": 5,
+          "RateLimitPeriod": 60
+        },
+        "ConcurrencyLimitSettings": {
+          "Enabled": true,
+          "ConcurrencyLimit": 1
+        }
+      },
+      {
+        "Enabled": false,
+        "EndpointType": "Topic",
+        "EntityName": "Product",
+        "EntityEventName": "ProductEvent",
+        "RateLimitSettings": {
+          "Enabled": true,
+          "RateLimit": 5,
+          "RateLimitPeriod": 60
+        },
+        "ConcurrencyLimitSettings": {
+          "Enabled": true,
+          "ConcurrencyLimit": 1
+        }
+      }
+    ]
   }
 }
