--- a/src/WRA.Umbraco.Web/appsettings.json
+++ b/src/WRA.Umbraco.Web/appsettings.json
@@ -122,7 +122,7 @@
     "MaxSubscriptionNameLength": 50,
     "EndpointSettings": [
       {
-        "Enabled": true,
+        "Enabled": false,
         "EndpointType": "Topic",
         "EntityName": "Member",
         "EntityEventName": "MemberEvent",
