Deployment f2d23e0c-41ae-4ac3-8a3f-0cc16549825d: Run number 890

--- a/src/WRA.Umbraco.Web/appsettings.Development.json
+++ b/src/WRA.Umbraco.Web/appsettings.Development.json
@@ -34,7 +34,7 @@
   "MessagingSettings": {
     "EndpointSettings": [
       {
-        "Enabled": false,
+        "Enabled": "MessagingSettings__EndpointSettings__0__Enabled",
         "EndpointType": "Topic",
         "EntityName": "Member",
         "EntityEventName": "MemberEvent",
