Deployment 8e7fb1ec-dba1-4728-92d8-4f5040a21138: Run number 897

--- a/src/WRA.Umbraco.Web/appsettings.Staging.json
+++ b/src/WRA.Umbraco.Web/appsettings.Staging.json
@@ -22,9 +22,10 @@
     }
   },
   "MessagingSettings": {
+    "Enabled": "MessagingSettings__Enabled",
     "EndpointSettings": [
       {
-        "Enabled": false,
+        "Enabled": true,
         "EndpointType": "Topic",
         "EntityName": "Member",
         "EntityEventName": "MemberEvent",
@@ -39,7 +40,7 @@
         }
       },
       {
-        "Enabled": false,
+        "Enabled": true,
         "EndpointType": "Topic",
         "EntityName": "Product",
         "EntityEventName": "ProductEvent",
