Deployment dcd3daa3-8b4e-4e88-a025-56b05d4abead: Run number 898

--- a/src/WRA.Umbraco.Web/appsettings.Development.json
+++ b/src/WRA.Umbraco.Web/appsettings.Development.json
@@ -49,7 +49,7 @@
         }
       },
       {
-        "Enabled": false,
+        "Enabled": "MessagingSettings__EndpointSettings__1__Enabled",
         "EndpointType": "Topic",
         "EntityName": "Product",
         "EntityEventName": "ProductEvent",
