Deployment bdd39d37-011b-48ea-896d-23125b9b7dc7: Run number 900

--- a/src/WRA.Umbraco.Web/appsettings.Production.json
+++ b/src/WRA.Umbraco.Web/appsettings.Production.json
@@ -27,7 +27,7 @@
   "MessagingSettings": {
     "EndpointSettings": [
       {
-        "Enabled": false,
+        "Enabled": "MessagingSettings__EndpointSettings__0__Enabled",
         "EndpointType": "Topic",
         "EntityName": "Member",
         "EntityEventName": "MemberEvent",
@@ -42,7 +42,7 @@
         }
       },
       {
-        "Enabled": false,
+        "Enabled": "MessagingSettings__EndpointSettings__1__Enabled",
         "EndpointType": "Topic",
         "EntityName": "Product",
         "EntityEventName": "ProductEvent",
