--- a/src/WRA.Umbraco.Web/appsettings.Staging.json
+++ b/src/WRA.Umbraco.Web/appsettings.Staging.json
@@ -25,7 +25,7 @@
     "Enabled": "MessagingSettings__Enabled",
     "EndpointSettings": [
       {
-        "Enabled": true,
+        "Enabled": "MessagingSettings__EndpointSettings__0__Enabled",
         "EndpointType": "Topic",
         "EntityName": "Member",
         "EntityEventName": "MemberEvent",
@@ -40,7 +40,7 @@
         }
       },
       {
-        "Enabled": true,
+        "Enabled": "MessagingSettings__EndpointSettings__1__Enabled",
         "EndpointType": "Topic",
         "EntityName": "Product",
         "EntityEventName": "ProductEvent",
