--- a/src/WRA.Umbraco.Web/WRA.Umbraco.Web.csproj
+++ b/src/WRA.Umbraco.Web/WRA.Umbraco.Web.csproj
@@ -18,6 +18,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="App_Plugins\UmbracoForms\Assets\Email-Example\WRA-Email-Logo.png" />
+  </ItemGroup>
 
   <!-- <ItemGroup>
     <Content Remove="Views\Calendar.cshtml" />
