--- a/src/WRA.Umbraco.Web/appsettings.json
+++ b/src/WRA.Umbraco.Web/appsettings.json
@@ -80,6 +80,7 @@
       }
     },
     "Forms": {
+      "DefaultEmailTemplate": "Forms/Emails/Example-Template.cshtml",
       "FieldTypes": {
         "Recaptcha3": {
           "SiteKey": "6LeTyYkpAAAAAO1xe42_iJdF1fMyJzHSh-_MzPYj",
