Deployment f08bdfe2-c27d-41e4-a0e6-8377bf19728b: Run number 915

--- a/src/WRA.Umbraco.Web/WRA.Umbraco.Web.csproj
+++ b/src/WRA.Umbraco.Web/WRA.Umbraco.Web.csproj
@@ -19,6 +19,9 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Plugins\umbracocommerce\backoffice\views\discount\rewards\labelviews\timebaseddiscountreward.html" />
+    <Content Include="App_Plugins\umbracocommerce\backoffice\views\discount\rules\labelviews\daterangerule.html" />
+    <Content Include="App_Plugins\umbracocommerce\backoffice\views\discount\rules\labelviews\timebaselineitemdiscountrule.html" />
     <Content Include="App_Plugins\UmbracoForms\Assets\Email-Example\WRA-Email-Logo.png" />
   </ItemGroup>
 
@@ -66,6 +69,10 @@
     <None Update="cmsimport.lic">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="App_Plugins\umbracocommerce\backoffice\views\discount\rules\labelviews\membersubscriptionrule.html" />
   </ItemGroup>
 
   <PropertyGroup>
