Deployment 061af06d-711b-411c-884c-5b5af9e9a888: Run number 917

--- a/src/WRA.Umbraco.Web/WRA.Umbraco.Web.csproj
+++ b/src/WRA.Umbraco.Web/WRA.Umbraco.Web.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Plugins\umbracocommerce\backoffice\views\discount\rewards\labelviews\timebaseddiscountreward.html" />
+    <Content Include="App_Plugins\umbracocommerce\backoffice\views\discount\rules\labelviews\companysubscriptionrule.html" />
     <Content Include="App_Plugins\umbracocommerce\backoffice\views\discount\rules\labelviews\daterangerule.html" />
     <Content Include="App_Plugins\umbracocommerce\backoffice\views\discount\rules\labelviews\timebaselineitemdiscountrule.html" />
     <Content Include="App_Plugins\UmbracoForms\Assets\Email-Example\WRA-Email-Logo.png" />
