--- a/src/WRA.Umbraco.Web/WRA.Umbraco.Web.csproj
+++ b/src/WRA.Umbraco.Web/WRA.Umbraco.Web.csproj
@@ -1,90 +1,86 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <Configurations>Debug;Release;Local</Configurations>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net8.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+        <Configurations>Debug;Release;Local</Configurations>
+    </PropertyGroup>
 
 
 
-  <!-- <ItemGroup>
-    <None Remove="gulpfile.js" />
-    <None Remove="VS.vs.zip" />
-  </ItemGroup>
-   -->
-  <ItemGroup>
-    <Content Include="App_Plugins\CustomBlockView\*">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="App_Plugins\umbracocommerce\backoffice\views\discount\rewards\labelviews\timebaseddiscountreward.html" />
-    <Content Include="App_Plugins\umbracocommerce\backoffice\views\discount\rules\labelviews\companysubscriptionrule.html" />
-    <Content Include="App_Plugins\umbracocommerce\backoffice\views\discount\rules\labelviews\daterangerule.html" />
-    <Content Include="App_Plugins\umbracocommerce\backoffice\views\discount\rules\labelviews\timebaselineitemdiscountrule.html" />
-    <Content Include="App_Plugins\UmbracoForms\Assets\Email-Example\WRA-Email-Logo.png" />
-  </ItemGroup>
+    <!-- <ItemGroup>
+      <None Remove="gulpfile.js" />
+      <None Remove="VS.vs.zip" />
+    </ItemGroup>
+     -->
+    <ItemGroup>
+        <Content Include="App_Plugins\umbracocommerce\backoffice\views\discount\rules\labelviews\daterangerule.html" CopyToOutputDirectory="PreserveNewest" />
+        <Content Include="App_Plugins\umbracocommerce\backoffice\views\discount\rewards\labelviews\timebaseddiscountreward.html" CopyToOutputDirectory="PreserveNewest" />
+        <Content Include="App_Plugins\umbracocommerce\backoffice\views\discount\rules\labelviews\timebaselineitemdiscountrule.html" CopyToOutputDirectory="PreserveNewest" />
+        <Content Include="App_Plugins\umbracocommerce\backoffice\views\discount\rules\labelviews\companysubscriptionrule.html" CopyToOutputDirectory="PreserveNewest" />
+        <Content Include="App_Plugins\umbracocommerce\backoffice\views\discount\rules\labelviews\membersubscriptionrule.html" CopyToOutputDirectory="PreserveNewest" />
+        <Content Include="App_Plugins\UmbracoForms\Assets\Email-Example\WRA-Email-Logo.png" CopyToOutputDirectory="PreserveNewest" />
+    </ItemGroup>
 
-  <!-- <ItemGroup>
-    <Content Remove="Views\Calendar.cshtml" />
-  </ItemGroup>
+    <!-- <ItemGroup>
+      <Content Remove="Views\Calendar.cshtml" />
+    </ItemGroup>
+  
+    <ItemGroup>
+      <Content Include="build.mjs" />
+    </ItemGroup> -->
 
-  <ItemGroup>
-    <Content Include="build.mjs" />
-  </ItemGroup> -->
+    <ItemGroup>
+        <PackageReference Include="CMSImport" Version="13.1.0" />
+        <PackageReference Include="Umbraco.Cloud.Cms.PublicAccess" Version="13.0.0" />
+        <PackageReference Include="Umbraco.Cloud.Identity.Cms" Version="13.0.0" />
+        <PackageReference Include="Umbraco.Cloud.StorageProviders.AzureBlob" Version="13.0.0" />
+        <PackageReference Include="Umbraco.Cms.Web.Common" Version="13.3.0" />
+        <PackageReference Include="Umbraco.Cms.Infrastructure" Version="13.3.0" />
+        <PackageReference Include="Umbraco.Commerce.Deploy" Version="13.1.1" />
+        <PackageReference Include="Umbraco.Deploy.Cloud" Version="13.1.0" />
+        <PackageReference Include="Umbraco.Deploy.Contrib" Version="13.0.0" />
+        <PackageReference Include="Umbraco.Forms" Version="13.1.2" />
+        <PackageReference Include="Umbraco.Forms.Deploy" Version="13.0.0" />
+        <PackageReference Include="Umbraco.Workflow" Version="13.0.2" />
+        <PackageReference Include="Umbraco.Forms.Core.Providers" Version="13.1.2" />
+        <PackageReference Update="Roslynator.Analyzers" Version="4.12.2">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+        </PackageReference>
 
-  <ItemGroup>
-    <PackageReference Include="CMSImport" Version="13.1.0" />
-    <PackageReference Include="Umbraco.Cloud.Cms.PublicAccess" Version="13.0.0" />
-    <PackageReference Include="Umbraco.Cloud.Identity.Cms" Version="13.0.0" />
-    <PackageReference Include="Umbraco.Cloud.StorageProviders.AzureBlob" Version="13.0.0" />
-    <PackageReference Include="Umbraco.Cms.Web.Common" Version="13.3.0" />
-    <PackageReference Include="Umbraco.Cms.Infrastructure" Version="13.3.0" />
-    <PackageReference Include="Umbraco.Commerce.Deploy" Version="13.1.1" />
-    <PackageReference Include="Umbraco.Deploy.Cloud" Version="13.1.0" />
-    <PackageReference Include="Umbraco.Deploy.Contrib" Version="13.0.0" />
-    <PackageReference Include="Umbraco.Forms" Version="13.1.2" />
-    <PackageReference Include="Umbraco.Forms.Deploy" Version="13.0.0" />
-    <PackageReference Include="Umbraco.Workflow" Version="13.0.2" />
-    <PackageReference Include="Umbraco.Forms.Core.Providers" Version="13.1.2" />
-    <PackageReference Update="Roslynator.Analyzers" Version="4.12.2">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-    </PackageReference>
-
-  </ItemGroup>
+    </ItemGroup>
 
 
-  <ItemGroup>
-    <ProjectReference Include="..\WRA.Umbraco\WRA.Umbraco.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\WRA.Umbraco\WRA.Umbraco.csproj" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="wwwroot\catalogue-thumbnails\" />
-    <Folder Include="wwwroot\css\dist\" />
-    <Folder Include="wwwroot\js\dist\" />
-  </ItemGroup>
+    <ItemGroup>
+        <Folder Include="wwwroot\catalogue-thumbnails\" />
+        <Folder Include="wwwroot\css\dist\" />
+        <Folder Include="wwwroot\js\dist\" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <None Update="cmsimport.lic">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
+    <ItemGroup>
+        <None Update="cmsimport.lic">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+        <Content Remove="Views\Partials\Forms\Emails\Example-Template.cshtml" />
+        <None Include="Views\Partials\Forms\Emails\Example-Template.cshtml" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <Content Include="App_Plugins\umbracocommerce\backoffice\views\discount\rules\labelviews\membersubscriptionrule.html" />
-  </ItemGroup>
 
-  <PropertyGroup>
-    <!-- Razor files are needed for the backoffice to work correctly -->
-    <CopyRazorGenerateFilesToPublishDirectory>true</CopyRazorGenerateFilesToPublishDirectory>
-  </PropertyGroup>
+    <PropertyGroup>
+        <!-- Razor files are needed for the backoffice to work correctly -->
+        <CopyRazorGenerateFilesToPublishDirectory>true</CopyRazorGenerateFilesToPublishDirectory>
+    </PropertyGroup>
 
-  <PropertyGroup>
-    <!-- Remove RazorCompileOnBuild and RazorCompileOnPublish when not using ModelsMode InMemoryAuto -->
-    <RazorCompileOnBuild>false</RazorCompileOnBuild>
-    <RazorCompileOnPublish>false</RazorCompileOnPublish>
-  </PropertyGroup>
+    <PropertyGroup>
+        <!-- Remove RazorCompileOnBuild and RazorCompileOnPublish when not using ModelsMode InMemoryAuto -->
+        <RazorCompileOnBuild>false</RazorCompileOnBuild>
+        <RazorCompileOnPublish>false</RazorCompileOnPublish>
+
+    </PropertyGroup>
 
 </Project>
