Deployment d254b3ac-dd66-4fcd-a965-36246f48d866: Run number 927

--- a/src/WRA.Umbraco.Web/WRA.Umbraco.Web.csproj
+++ b/src/WRA.Umbraco.Web/WRA.Umbraco.Web.csproj
@@ -68,6 +68,10 @@
         </None>
     </ItemGroup>
 
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Views\Partials\Forms\Emails\Example-Template.cshtml" />
+    </ItemGroup>
+
 
     <PropertyGroup>
         <!-- Razor files are needed for the backoffice to work correctly -->
