Deployment ea2c672f-957f-425d-a04c-bece6d8f1c0b: Run number 932

--- a/src/WRA.Umbraco.Web/appsettings.json
+++ b/src/WRA.Umbraco.Web/appsettings.json
@@ -80,7 +80,8 @@
       }
     },
     "Forms": {
-      "DefaultEmailTemplate": "Forms/Emails/Default-Template.cshtml",
+      "FormDesign": {
+        "DefaultEmailTemplate": "Forms/Emails/Default-Template.cshtml",
       "FieldTypes": {
         "Recaptcha3": {
           "SiteKey": "6LeTyYkpAAAAAO1xe42_iJdF1fMyJzHSh-_MzPYj",
