Deployment e726fd04-fb9b-4520-b2d6-f38174692599: Run number 936

--- a/src/WRA.Umbraco.Web/appsettings.Production.json
+++ b/src/WRA.Umbraco.Web/appsettings.Production.json
@@ -55,6 +55,21 @@
           "Enabled": true,
           "ConcurrencyLimit": 1
         }
+      },
+      {
+        "Enabled": "MessagingSettings__EndpointSettings__2__Enabled",
+        "EndpointType": "Topic",
+        "EntityName": "Order",
+        "EntityEventName": "OrderEvent",
+        "RateLimitSettings": {
+          "Enabled": true,
+          "RateLimit": 5,
+          "RateLimitPeriod": 60
+        },
+        "ConcurrencyLimitSettings": {
+          "Enabled": true,
+          "ConcurrencyLimit": 1
+        }
       }
     ]
   }
