--- a/src/WRA.Umbraco.Web/appsettings.json
+++ b/src/WRA.Umbraco.Web/appsettings.json
@@ -82,91 +82,113 @@
     "Forms": {
       "FormDesign": {
         "DefaultEmailTemplate": "Forms/Emails/Default-Template.cshtml",
-      "FieldTypes": {
-        "Recaptcha3": {
-          "SiteKey": "6LeTyYkpAAAAAO1xe42_iJdF1fMyJzHSh-_MzPYj",
-          "PrivateKey": "6LeTyYkpAAAAAHtov-al_drTRz0VPRffGA89iYuT"
+        "FieldTypes": {
+          "Recaptcha3": {
+            "SiteKey": "6LeTyYkpAAAAAO1xe42_iJdF1fMyJzHSh-_MzPYj",
+            "PrivateKey": "6LeTyYkpAAAAAHtov-al_drTRz0VPRffGA89iYuT"
+          }
         }
       }
+    },
+    "ConnectionStrings": {
+      "AzureServiceBus": "Endpoint=sb://wrauns.servicebus.windows.net/;SharedAccessKeyName=UmbracoSharedAccessKey;SharedAccessKey=dzoQR2aSLyiBzBt0Xs4JqdcQNbYo97qo8+ASbL+vGOA=",
+      "umbracoDbDSN": "Data Source=|DataDirectory|/Umbraco.sqlite.db;Cache=Shared;Foreign Keys=True;Pooling=True",
+      "umbracoDbDSN_ProviderName": "Microsoft.Data.SQLite",
+      "umbracoCommerceDbDSN": "Data Source=|DataDirectory|/Umbraco.Commerce.sqlite.db;Mode=ReadWrite;Foreign Keys=True;Pooling=True;Cache=Shared",
+      "umbracoCommerceDbDSN_ProviderName": "Microsoft.Data.SQLite"
+    },
+    "GatedContentSettings": {
+      "GatedMemberGroupsKey": "VisibleToMemberGroups",
+      "VisibleToAllKey": "VisibleToAll",
+      "AnonymousUserName": "Anonymous",
+      "VisibleToAllSlidingCacheSeconds": "14400",
+      "VisibleToMemberGroupsSlidingCacheSeconds": "1800",
+      "MemberAuthorizedByGroupSlidingCacheMinutes": "1800"
+    },
+    "RecurringJobSettings": {
+      "AllJobsManual": true,
+      "DisableJobs": false
+    },
+    "MessagingSettings": {
+      "Enabled": true,
+      "ApplicationSubscriptionPrefix": "EVZ",
+      "ApplicationSubscriptionAlias": "Umbraco",
+      "ApplicationSubscriptionSuffix": "Sub",
+      "BusConnectionString": "Endpoint=sb://wrauns.servicebus.windows.net/;SharedAccessKeyName=UmbracoSharedAccessKey;SharedAccessKey=dzoQR2aSLyiBzBt0Xs4JqdcQNbYo97qo8+ASbL+vGOA=",
+      "BusEventSource": "UmbracoCloud",
+      "BaseUrl": "https://localhost:44336",
+      "SchedulerQueueName": "scheduler",
+      "SchedulerRetryDelaySeconds": [
+        60,
+        300,
+        6000
+      ],
+      "GlobalRetryCount": 3,
+      "GlobalRetryDelaySeconds": 5,
+      "MaxSubscriptionNameLength": 50,
+      "EndpointSettings": [
+        {
+          "Enabled": false,
+          "EndpointType": "Topic",
+          "EntityName": "Member",
+          "EntityEventName": "MemberEvent",
+          "RateLimitSettings": {
+            "Enabled": true,
+            "RateLimit": 5,
+            "RateLimitPeriod": 60
+          },
+          "ConcurrencyLimitSettings": {
+            "Enabled": true,
+            "ConcurrencyLimit": 1
+          }
+        },
+        {
+          "Enabled": false,
+          "EndpointType": "Topic",
+          "EntityName": "Product",
+          "EntityEventName": "ProductEvent",
+          "RateLimitSettings": {
+            "Enabled": true,
+            "RateLimit": 5,
+            "RateLimitPeriod": 60
+          },
+          "ConcurrencyLimitSettings": {
+            "Enabled": true,
+            "ConcurrencyLimit": 1
+          }
+        },
+        {
+          "Enabled": false,
+          "EndpointType": "Topic",
+          "EntityName": "Order",
+          "EntityEventName": "OrderEvent",
+          "RateLimitSettings": {
+            "Enabled": true,
+            "RateLimit": 5,
+            "RateLimitPeriod": 60
+          },
+          "ConcurrencyLimitSettings": {
+            "Enabled": true,
+            "ConcurrencyLimit": 1
+          }
+        }
+      ]
+    },
+    "DateFolderSettings": {
+      "ItemDateProperty": "originalPublishedDate",
+      "CreateDayFolders": false,
+      "MonthFormat": "MMMM",
+      "OrderByDescending": true,
+      "FolderDocType": "dateFolder",
+      "ItemDocTypes": [
+        "hotTipEntry"
+      ]
+    },
+    "WRAExternalApiSettings": {
+      "BaseUrl": "https://app2.wra.org/umbraco/api",
+      "ApiVersion": "1",
+      "ApiKey": "sJWH7cFR6rSVVYMjrxYAIY0ZrhW7SVJYik5qTUb",
+      "ApiKeyHeader": "X-API-KEY"
     }
-  },
-  "ConnectionStrings": {
-    "AzureServiceBus": "Endpoint=sb://wrauns.servicebus.windows.net/;SharedAccessKeyName=UmbracoSharedAccessKey;SharedAccessKey=dzoQR2aSLyiBzBt0Xs4JqdcQNbYo97qo8+ASbL+vGOA=",
-    "umbracoDbDSN": "Data Source=|DataDirectory|/Umbraco.sqlite.db;Cache=Shared;Foreign Keys=True;Pooling=True",
-    "umbracoDbDSN_ProviderName": "Microsoft.Data.SQLite",
-    "umbracoCommerceDbDSN": "Data Source=|DataDirectory|/Umbraco.Commerce.sqlite.db;Mode=ReadWrite;Foreign Keys=True;Pooling=True;Cache=Shared",
-    "umbracoCommerceDbDSN_ProviderName": "Microsoft.Data.SQLite"
-  },
-  "GatedContentSettings": {
-    "GatedMemberGroupsKey": "VisibleToMemberGroups",
-    "VisibleToAllKey": "VisibleToAll",
-    "AnonymousUserName": "Anonymous",
-    "VisibleToAllSlidingCacheSeconds": "14400",
-    "VisibleToMemberGroupsSlidingCacheSeconds": "1800",
-    "MemberAuthorizedByGroupSlidingCacheMinutes": "1800"
-  },
-  "RecurringJobSettings": {
-    "AllJobsManual": true,
-    "DisableJobs": false
-  },
-  "MessagingSettings": {
-    "Enabled": true,
-    "ApplicationSubscriptionPrefix": "EVZ",
-    "ApplicationSubscriptionAlias": "Umbraco",
-    "ApplicationSubscriptionSuffix": "Sub",
-    "BusConnectionString": "Endpoint=sb://wrauns.servicebus.windows.net/;SharedAccessKeyName=UmbracoSharedAccessKey;SharedAccessKey=dzoQR2aSLyiBzBt0Xs4JqdcQNbYo97qo8+ASbL+vGOA=",
-    "BusEventSource": "UmbracoCloud",
-    "BaseUrl": "https://localhost:44336",
-    "SchedulerQueueName": "scheduler",
-    "SchedulerRetryDelaySeconds": [ 60, 300, 6000 ],
-    "GlobalRetryCount": 3,
-    "GlobalRetryDelaySeconds": 5,
-    "MaxSubscriptionNameLength": 50,
-    "EndpointSettings": [
-      {
-        "Enabled": false,
-        "EndpointType": "Topic",
-        "EntityName": "Member",
-        "EntityEventName": "MemberEvent",
-        "RateLimitSettings": {
-          "Enabled": true,
-          "RateLimit": 5,
-          "RateLimitPeriod": 60
-        },
-        "ConcurrencyLimitSettings": {
-          "Enabled": true,
-          "ConcurrencyLimit": 1
-        }
-      },
-      {
-        "Enabled": false,
-        "EndpointType": "Topic",
-        "EntityName": "Product",
-        "EntityEventName": "ProductEvent",
-        "RateLimitSettings": {
-          "Enabled": true,
-          "RateLimit": 5,
-          "RateLimitPeriod": 60
-        },
-        "ConcurrencyLimitSettings": {
-          "Enabled": true,
-          "ConcurrencyLimit": 1
-        }
-      }
-    ]
-  },
-  "DateFolderSettings": {
-    "ItemDateProperty": "originalPublishedDate",
-    "CreateDayFolders": false,
-    "MonthFormat": "MMMM",
-    "OrderByDescending": true,
-    "FolderDocType": "dateFolder",
-    "ItemDocTypes": [ "hotTipEntry" ]
-  },
-  "WRAExternalApiSettings": {
-    "BaseUrl": "https://app2.wra.org/umbraco/api",
-    "ApiVersion": "1",
-    "ApiKey": "sJWH7cFR6rSVVYMjrxYAIY0ZrhW7SVJYik5qTUb",
-    "ApiKeyHeader": "X-API-KEY"
   }
 }
