--- a/src/WRA.Umbraco.Web/appsettings.Development.json
+++ b/src/WRA.Umbraco.Web/appsettings.Development.json
@@ -28,10 +28,50 @@
       "RuntimeMinification": {
         "UseInMemoryCache": true,
         "CacheBuster": "Timestamp"
+      },
+      "Global": {
+        "Smtp": {
+          "Host": "smtp.postmarkapp.com",
+          "From": "WRA@lightburn.co",
+          "Port": 587,
+          "SecureSocketOptions": "Auto",
+          "Username": "Umbraco__CMS__Global__Smtp__Password ",
+          "Password": "Umbraco__CMS__Global__Smtp__Username"
+        }
       }
     }
   },
+  "DateFolderSettings": {
+    "ItemDateProperty": "originalPublishedDate",
+    "CreateDayFolders": false,
+    "MonthFormat": "MMMM",
+    "OrderByDescending": true,
+    "FolderDocType": "dateFolder",
+    "ItemDocTypes": [
+      "hotTipEntry"
+    ]
+  },
+  "GatedContentSettings": {
+    "GatedMemberGroupsKey": "VisibleToMemberGroups",
+    "VisibleToAllKey": "VisibleToAll",
+    "AnonymousUserName": "Anonymous",
+    "VisibleToAllSlidingCacheSeconds": "14400",
+    "VisibleToMemberGroupsSlidingCacheSeconds": "1800",
+    "MemberAuthorizedByGroupSlidingCacheMinutes": "1800"
+  },
   "MessagingSettings": {
+    "Enabled": true,
+    "ApplicationSubscriptionPrefix": "EVZ",
+    "ApplicationSubscriptionAlias": "Umbraco",
+    "ApplicationSubscriptionSuffix": "Sub",
+    "BusConnectionString": "Endpoint=sb://wrauns.servicebus.windows.net/;SharedAccessKeyName=UmbracoSharedAccessKey;SharedAccessKey=dzoQR2aSLyiBzBt0Xs4JqdcQNbYo97qo8+ASbL+vGOA=",
+    "BusEventSource": "UmbracoCloud",
+    "BaseUrl": "https://localhost:44336",
+    "SchedulerQueueName": "scheduler",
+    "SchedulerRetryDelaySeconds": [ 60, 300, 6000 ],
+    "GlobalRetryCount": 3,
+    "GlobalRetryDelaySeconds": 5,
+    "MaxSubscriptionNameLength": 50,
     "EndpointSettings": [
       {
         "Enabled": "MessagingSettings__EndpointSettings__0__Enabled",
@@ -79,5 +119,15 @@
         }
       }
     ]
+  },
+  "WRAExternalApiSettings": {
+    "BaseUrl": "https://app2.wra.org/umbraco/api",
+    "ApiVersion": "1",
+    "ApiKey": "sJWH7cFR6rSVVYMjrxYAIY0ZrhW7SVJYik5qTUb",
+    "ApiKeyHeader": "X-API-KEY"
+  },
+  "RecurringJobSettings": {
+    "AllJobsManual": true,
+    "DisableJobs": false
   }
 }
